# test_task

./: .env  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  DockerFIle  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
api/: filters.py  handlers.py  serializers.py  urls.py  views.py
api/validators/: dds_validators.py
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/content/: filters.py  handlers.py  schemas.py
core/apps/common/: models.py
core/apps/dds/: admin.py  admin_form.py  apps.py
core/apps/dds/dto/inputs/: create_dds.py
core/apps/dds/dto/outputs/: get_dds.py
core/apps/dds/entities/: dds.py
core/apps/dds/exceptions/: dds.py
core/apps/dds/filters/: dds.py
core/apps/dds/migrations/: 0001_initial.py  0001_squashed_0007_rename_category_choice_choicecategory_choice_value_and_more.py  0002_alter_dds_subcategory.py  0003_alter_choicecategory_options_and_more.py  0004_alter_dds_subcategory.py  0005_alter_dds_category.py  0006_alter_dds_category_alter_dds_subcategory.py  0007_rename_category_choice_choicecategory_choice_value_and_more.py
core/apps/dds/models/: dds.py
core/apps/dds/repositories/: base.py  orm.py
core/apps/dds/services/: dds.py
core/apps/dds/validators/: domain.py  infrastructure.py
core/apps/quotes/: apps.py
core/apps/quotes/application/: exceptions.py  services.py
core/apps/quotes/domain/entities/: content.py  quotes.py
core/apps/quotes/infrastructure/: filters.py
core/apps/quotes/infrastructure/models/: content.py  quotes.py
core/apps/quotes/migrations/: 0001_initial.py
core/project/: asgi.py  containers.py  urls.py  wsgi.py
core/project/settings/: local.py  main.py
docker_compose/: app.yaml  storages.yaml
