[project]
name = "test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "PXL",email = "pxl.goose@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "django-environ (>=0.12.0, <1.0.0)",
    "django-smart-selects (>=1.7.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
