[project]
name = "test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "PXL",email = "pxl.goose@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "django-environ (>=0.12.0, <1.0.0)",
    "django-smart-selects (>=1.7.2,<2.0.0)",
    "django-admin-rangefilter (>=0.13.3,<0.14.0)",
    "django-filter (>=25.1,<26.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "punq (>=0.7.0,<0.8.0)",
    "coreapi (>=2.3.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
isort = "^6.0.1"
